--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
 	<body>
 
 		<ul>
-			<li><a href="#">Home</a></li>
+			<li class="active"><a href="#">Home</a></li>
 
 		</ul>
 
 		<center><h1>Agwebberley's Portfolio</h1></center>
-
+a
 
 	</body>
 
