--- a/index.html
+++ b/index.html
@@ -13,11 +13,12 @@
 
 		<ul>
 			<li class="active"><a href="#">Home</a></li>
+			<li><a href=portfolio.html>Portfolio</a></li>
 
 		</ul>
 
 		<center><h1>Agwebberley's Portfolio</h1></center>
-a
+
 
 	</body>
 
