--- a/portfolio.html
+++ b/portfolio.html
@@ -7,6 +7,13 @@
 	</head>
 
 	<body>
+		<ul>
+			<li><a href="index.html">Home</a></li>
+			<li class="active"><a href=portfolio.html>Portfolio</a></li>
+
+		</ul>
+
+		<h1>Portfolio</h1>
 
 	</body>
 
