--- a/portfolio.html
+++ b/portfolio.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<tite>Portfolio</tite>
-		<link rel="stylesheet" href="style.css">
 
+	<head>
+		<title>Portfolio</title>
+		<link rel="stylesheet" href="style.css">
 	</head>
 
 	<body>
 		<ul>
 			<li><a href="index.html">Home</a></li>
 			<li class="active"><a href=portfolio.html>Portfolio</a></li>
-
 		</ul>
 
-		<h1>Portfolio</h1>
+		<center><h1>Portfolio</h1></center>
 
+		<center><p>This is where I will place my projects</p></center>
 	</body>
 
 </html>
