--- a/projects.html
+++ b/projects.html
@@ -2,32 +2,29 @@
 <html>
 
 	<head>
-
-		<title>Agwebberley's Portfolio</title>
-
+		<title>Portfolio</title>
 		<link rel="stylesheet" href="style.css">
-
 	</head>
 
 	<body>
 
 <div class="navbar">
-  <a href="#home">Home</a>
+  <a href="index.html">Home</a>
   <div class="dropdown">
     <button class="dropbtn">Projects 
       <i class="fa fa-caret-down"></i>
     </button>
     <div class="dropdown-content">
-      <a href="/portfolio/trophybot.html">Trophy Bot</a>
+      <a href="/trophybot.html">Trophy Bot</a>
       <a href="#">Link 2</a>
       <a href="#">Link 3</a>
     </div>
   </div> 
 </div>
 
-		<center><h1>Agwebberley's Portfolio</h1></center>
+		<center><h1>Portfolio</h1></center>
 
-
+		<center><p>This is where I will place my projects</p></center>
 	</body>
 
 </html>
