--- a/portfolio/trophybot.html
+++ b/portfolio/trophybot.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<title>Trophy Bot</title>
-		<link rel="stylesheet" href="style.css">
+		<link rel="stylesheet" href="../style.css">
 	</head>
 
 	<body>
