--- a/portfolio/trophybot.html
+++ b/portfolio/trophybot.html
@@ -7,4 +7,6 @@
 
 	<body>
 		<center><h1>TrophyBot</h1></center>
+		<center><p>I have created a Discord bot to count the number of "wins" that a server posts after a week the top three winners will be choosen then a image is created and that image is sent. A sample image is below.</p></center>
+		<center><img src="../images/placement_temp.jpg" alt="placement image"></center>
 	</body>
