--- a/portfolio/trophybot.html
+++ b/portfolio/trophybot.html
@@ -14,7 +14,7 @@
     			</button>
     			<div class="dropdown-content">
       				<a class="active" href="#">Trophy Bot</a>
-      				<a href="#">Link 2</a>
+      				<a href="totank.html">To Tank</a>
       				<a href="#">Link 3</a>
     			</div>
   		</div> 
