--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
 	<body>
 
 <div class="navbar">
-  <a href="#home">Home</a>
+  <a class="active" href="#">Home</a>
   <div class="dropdown">
     <button class="dropbtn">Projects 
       <i class="fa fa-caret-down"></i>
     </button>
     <div class="dropdown-content">
       <a href="/portfolio/trophybot.html">Trophy Bot</a>
-      <a href="#">Link 2</a>
+      <a href="/portfolio/totank.html">To Tank</a>
       <a href="#">Link 3</a>
     </div>
   </div> 
