--- a/portfolio/totank.html
+++ b/portfolio/totank.html
@@ -6,6 +6,20 @@
 </head>
 <body>
 
+	<div class="navbar">
+  <a href="../index.html">Home</a>
+  <div class="dropdown">
+    <button class="dropbtn">Projects 
+      <i class="fa fa-caret-down"></i>
+    </button>
+    <div class="dropdown-content">
+      <a href="trophybot.html">Trophy Bot</a>
+      <a class="active" href="#">To Tank</a>
+      <a href="#">Link 3</a>
+    </div>
+  </div> 
+</div>
+
 <center><h1>ToTank</h1></center>
 
 <h2>Windows download </h2><h1><a href="https://github.com/Agwebberley/agwebberley.github.io/raw/master/totankfiles/ToTank.zip" target="blank">ToTank</a></h1>
