--- a/portfolio/totank.html
+++ b/portfolio/totank.html
@@ -22,6 +22,9 @@
 
 <center><h1>ToTank</h1></center>
 
+<p>In the 2018-19 school year I took a computer science class in which I created To Tank using Unity and C#</p>
+<p>To Tank is a two player game using a single keyboard (or two if you have a spare you can hook up) For Player 1 you use wasd to move and space to fire Player 2 uses the arrow keys for movement and enter (or return depending on the keybord) to fire.</p>
+
 <h2>Windows download </h2><h1><a href="https://github.com/Agwebberley/agwebberley.github.io/raw/master/totankfiles/ToTank.zip" target="blank">ToTank</a></h1>
 <h2>Windows instutions</h2><h3>extract zip file then open the extracted folder and click TankGame.exe choose quality and resolution and click play.</h3>
 
