--- a/portfolio/totank.html
+++ b/portfolio/totank.html
@@ -26,7 +26,7 @@
 <p>To Tank is a two player game using a single keyboard (or two if you have a spare you can hook up) For Player 1 you use wasd to move and space to fire Player 2 uses the arrow keys for movement and enter (or return depending on the keybord) to fire.</p>
 
 <h2>Windows download</h2>
-<a href="https://github.com/Agwebberley/agwebberley.github.io/raw/master/totankfiles/ToTank.zip" target="blank"><img src="../images/Tank.jpg" alt="ToTank"></a>
+<a href="https://github.com/Agwebberley/agwebberley.tk/releases/download/V1.0/ToTank.zip" target="blank"><img src="../images/Tank.jpg" alt="ToTank"></a>
 <h2>Windows instutions</h2><h3>extract zip file then open the extracted folder and click TankGame.exe choose quality and resolution and click play.</h3>
 
 </body>
