--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div class="dropdown-content">
       <a href="/portfolio/trophybot.html">Trophy Bot</a>
       <a href="/portfolio/totank.html">To Tank</a>
-      <a href="#">Link 3</a>
+      <a href="/portfolio/cryption2.html">Cryption V2</a>
     </div>
   </div> 
 </div>
