--- a/portfolio/totank.html
+++ b/portfolio/totank.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Andrew's Portfolio</title>
+<title>ToTank</title>
 	 <link rel="stylesheet" type="text/css" href="../style.css">
 </head>
 <body>
@@ -15,7 +15,7 @@
     <div class="dropdown-content">
       <a href="trophybot.html">Trophy Bot</a>
       <a class="active" href="#">To Tank</a>
-      <a href="#">Link 3</a>
+      <a href="cryption2.html">Cryption V2</a>
     </div>
   </div> 
 </div>
