--- a/portfolio/trophybot.html
+++ b/portfolio/trophybot.html
@@ -15,11 +15,11 @@
     			<div class="dropdown-content">
       				<a class="active" href="#">Trophy Bot</a>
       				<a href="totank.html">To Tank</a>
-      				<a href="#">Link 3</a>
+      				<a href="cryption2.html">cryption V2</a>
     			</div>
   		</div> 
 	</div>
 		<center><h1>TrophyBot</h1></center>
-		<center><p>I have created a Discord bot to count the number of "wins" that a server posts after a week the top three winners will be choosen then a image is created and that image is sent. A sample image is below.</p></center>
+		<center><p>I have created a Discord bot using the discord.py API to count the number of "wins" that a server posts after a week the top three winners will be choosen then a image is created and that image is sent. A sample image is below.</p></center>
 		<center><img src="../images/placement_temp.jpg" alt="placement image"></center>
 	</body>
