--- a/portfolio/cryption2.html
+++ b/portfolio/cryption2.html
@@ -14,14 +14,17 @@
       			<i class="fa fa-caret-down"></i>
     			</button>
     			<div class="dropdown-content">
-      				<a href="#">Trophy Bot</a>
+      				<a href="trophybot.html">Trophy Bot</a>
       				<a href="totank.html">To Tank</a>
-      				<a class="active" href="cryption2.html">cryption V2</a>
+      				<a class="active" href="#">cryption V2</a>
     			</div>
   		</div> 
 	</div>
 
 	<center><h1>Cryption V2</h1></center>
-	<p>I</p>
+
+	<p>I created the cryption V2 after its predicesor V1 which was full of errors and worked less times than not.  The cryption program encrypts and decrypts messages using a seed.  To decrypt you need the encrypted message, the seed, and of course my program.  V2 is actually shorter than V1 was!</p>
+
+	<h2><a src=>Download</a></h2>
 </body>
 </html>
