--- a/portfolio/cryption2.html
+++ b/portfolio/cryption2.html
@@ -19,6 +19,7 @@
       				<a class="active" href="#">cryption V2</a>
     			</div>
   		</div> 
+  		<a href="contact.html">Contact</a>
 	</div>
 
 	<center><h1>Cryption V2</h1></center>
