--- a/portfolio/totank.html
+++ b/portfolio/totank.html
@@ -18,6 +18,7 @@
       <a href="cryption2.html">Cryption V2</a>
     </div>
   </div> 
+  <a href="contact.html">Contact</a>
 </div>
 
 <center><h1>ToTank</h1></center>
