--- a/contact.html
+++ b/contact.html
@@ -1,18 +1,12 @@
-<!DOCTYPE html>
-<html>
-
+<DOCTYPE html>
+	<html>
 	<head>
-
-		<title>Agwebberley's Portfolio</title>
-
-		<link rel="stylesheet" href="style.css">
-
+		<title>Contact</title>
+		<link rel="stylesheet" type="text/css" href="style.css">
 	</head>
-
 	<body>
-
-<div class="navbar">
-  <a class="active" href="#">Home</a>
+		<div class="navbar">
+  <a href="index.html">Home</a>
 
   <div class="dropdown">
     <button class="dropbtn">Projects 
@@ -24,12 +18,8 @@
       <a href="/portfolio/cryption2.html">Cryption V2</a>
     </div>
   </div> 
-  <a href="contact.html">Contact</a>
+  <a class="active" href="contact.html">Contact</a>
 </div>
-
-		<center><h1>Agwebberley's Portfolio</h1></center>
-
+		<center><h1>Contact Me</h1></center>
 
 	</body>
-
-</html>
