--- a/contact.html
+++ b/contact.html
@@ -21,5 +21,6 @@
   <a class="active" href="contact.html">Contact</a>
 </div>
 		<center><h1>Contact Me</h1></center>
+		<h3>You can contact me at <a href="mailto:agwebberley@gmail.com">agwebberley@gmail.com</a></h3>
 
 	</body>
