--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
 		<center><h1>Agwebberley's Portfolio</h1></center>
 
 
+		<center><h3>About Me</h3></center>
+		<p>My name is Andrew Webberley also know as Agwebberley. I have been a programmer since 2014 when I was 10 years old, I am currently 15 (As of 2020).  I started with Microsoft Visual basic and since then have learned many languages.  Currently my main language is Python 3.  At varing depths I have learned HTML, CSS, C++, C#, python, lua, Visual Basic, and Java.  I am a homeschooled Sophmore in highschool.</p>
+
 	</body>
 
 </html>
