--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
 
 		<center><h3>About Me</h3></center>
-		<p>My name is Andrew Webberley also know as Agwebberley. I have been a programmer since 2014 when I was 10 years old, I am currently 15 (As of 2020).  I started with Microsoft Visual basic and since then have learned many languages.  Currently my main language is Python 3.  At varing depths I have learned HTML, CSS, C++, C#, python, lua, Visual Basic, and Java.  I am a homeschooled Sophmore in highschool.</p>
+		<p>My name is Andrew Webberley also know as Agwebberley. I have been a programmer since 2014 when I was 10 years old, I am currently 15 (As of 2020).  I started with Microsoft Visual basic and since then have learned many languages.  Currently, my main language is Python 3.  At varying depths, I have learned HTML, CSS, C++, C#, Python, Lua, Visual Basic, and Java.  I am a homeschooled Sophmore in high school.</p>
 
 	</body>
 
