--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
 
 		<center><h3>About Me</h3></center>
-		<p>My name is Andrew Webberley also know as Agwebberley. I have been a programmer since 2014 when I was 10 years old, I am currently 15 (As of 2020).  I started with Microsoft Visual basic and since then have learned many languages.  Currently, my main language is Python 3.  At varying depths, I have learned HTML, CSS, C++, C#, Python, Lua, Visual Basic, and Java.  I am a homeschooled Sophmore in high school.</p>
+		<center><p>My name is Andrew Webberley also know as Agwebberley. I have been a programmer since 2014 when I was 10 years old, I am currently 15 (As of 2020).  I started with Microsoft Visual basic and since then have learned many languages.  Currently, my main language is Python 3.  At varying depths, I have learned HTML, CSS, C++, C#, Python, Lua, Visual Basic, and Java.  I am a homeschooled Sophmore in high school.  I plan on going to collage at The Masters University (Go Mustangs!).  I would evntually like to either get a job in ethical hacking or machine learning.</p></center>
 
 <footer><script async src="//static.zotabox.com/8/d/8d9f275810de031dd29c47cb9874d576/widgets.js"></script></script>
 
