--- a/portfolio/trophybot.html
+++ b/portfolio/trophybot.html
@@ -3,6 +3,17 @@
 	<head>
 		<title>Trophy Bot</title>
 		<link rel="stylesheet" href="../style.css">
+
+		<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-163518874-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-163518874-1');
+</script>
+
 	</head>
 
 	<body>
