--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
       <a href="/portfolio/trophybot.html">Trophy Bot</a>
       <a href="/portfolio/totank.html">To Tank</a>
       <a href="/portfolio/cryption2.html">Cryption V2</a>
+      <a href="/portfolio/cryptiongui.html">Cryption GUI</a>
     </div>
   </div> 
 </div>
