--- a/portfolio/cryption2.html
+++ b/portfolio/cryption2.html
@@ -28,6 +28,7 @@
       				<a href="trophybot.html">Trophy Bot</a>
       				<a href="totank.html">To Tank</a>
       				<a class="active" href="#">cryption V2</a>
+              <a href="cryptiongui.html">Cryption GUI</a>
     			</div>
   		</div> 
 	</div>
