--- a/portfolio/totank.html
+++ b/portfolio/totank.html
@@ -27,6 +27,7 @@
       <a href="trophybot.html">Trophy Bot</a>
       <a class="active" href="#">To Tank</a>
       <a href="cryption2.html">Cryption V2</a>
+      <a href="cryptiongui.html">Cryption GUI</a>
     </div>
   </div> 
 </div>
