--- a/portfolio/trophybot.html
+++ b/portfolio/trophybot.html
@@ -27,6 +27,7 @@
       				<a class="active" href="#">Trophy Bot</a>
       				<a href="totank.html">To Tank</a>
       				<a href="cryption2.html">cryption V2</a>
+              <a href="cryptiongui.html">Cryption GUI</a>
     			</div>
   		</div> 
 	</div>
