--- a/portfolio/cryptiongui.html
+++ b/portfolio/cryptiongui.html
@@ -33,7 +33,12 @@
   		</div> 
 	</div>
 
+<center><h1>Cryption GUI BETA</h1>
+<h3>(Newest Edition)</h3>
+<h3>Decryption currently broken will be fixed soon!</h3></center>
 
+<br>
+<p>Currently my newest edition of my cryption program Cryption GUI is my first python program using a GUI w/ Tkinter</p>
 
 	</body>
 	</html>
