--- a/portfolio/cryptiongui.html
+++ b/portfolio/cryptiongui.html
@@ -38,7 +38,7 @@
 <h3>Decryption currently broken will be fixed soon!</h3></center>
 
 <br>
-<p>Currently my newest edition of my cryption program Cryption GUI is my first python program using a GUI w/ Tkinter</p>
+<p>Currently my newest edition of my cryption program Cryption GUI is my first python program using a GUI w/ Tkinter.  I have also converted this python program to an exe through PYisntaller.</p>
 
 	</body>
 	</html>
