--- a/portfolio/cryptiongui.html
+++ b/portfolio/cryptiongui.html
@@ -40,5 +40,10 @@
 <br>
 <p>Currently my newest edition of my cryption program Cryption GUI is my first python program using a GUI w/ Tkinter.  I have also converted this python program to an exe through PYisntaller.</p></center>
 
+<br><br>
+<h3>Downloads</h3>
+<a href="https://github.com/Agwebberley/agwebberley.tk/raw/master/files/CryptionGUI%20(BETA).zip">CryptionGUI.exe</a>
+<a href="https://raw.githubusercontent.com/Agwebberley/agwebberley.tk/master/files/CryptionGUI.py">CryptionGUI.py</a>
+
 	</body>
 	</html>
