--- a/portfolio/cryptiongui.html
+++ b/portfolio/cryptiongui.html
@@ -42,8 +42,8 @@
 
 <br><br>
 <h3>Downloads</h3>
-<a href="https://github.com/Agwebberley/agwebberley.tk/raw/master/files/CryptionGUI%20(BETA).zip">CryptionGUI.exe</a>
-<a href="https://raw.githubusercontent.com/Agwebberley/agwebberley.tk/master/files/CryptionGUI.py">CryptionGUI.py</a>
+<h3><a href="https://github.com/Agwebberley/agwebberley.tk/raw/master/files/CryptionGUI%20(BETA).zip">CryptionGUI.exe</a>
+<a href="https://raw.githubusercontent.com/Agwebberley/agwebberley.tk/master/files/CryptionGUI.py">CryptionGUI.py</a></h3>
 
 	</body>
 	</html>
