--- a/portfolio/cryptiongui.html
+++ b/portfolio/cryptiongui.html
@@ -36,6 +36,7 @@
 <center><h1>Cryption GUI BETA</h1>
 <h3>(Newest Edition)</h3>
 <h3>Decryption currently broken will be fixed soon!</h3>
+<h3>Use Cryption V2 for less bugs</h3>
 
 <br>
 <p>Currently my newest edition of my cryption program Cryption GUI is my first python program using a GUI w/ Tkinter.  I have also converted this python program to an exe through PYisntaller.</p></center>
