--- a/portfolio/cryptiongui.html
+++ b/portfolio/cryptiongui.html
@@ -43,7 +43,7 @@
 
 <br><br>
 <h3>Downloads</h3>
-<h3><a href="https://github.com/Agwebberley/agwebberley.tk/raw/master/files/CryptionGUI%20(BETA).zip">CryptionGUI.exe</a>
+<h3><a href="https://github.com/Agwebberley/agwebberley.tk/raw/master/files/CryptionGUI%20(ALPHA).zip">CryptionGUI.exe</a>
 <br>
 <a href="https://raw.githubusercontent.com/Agwebberley/agwebberley.tk/master/files/CryptionGUI.py">CryptionGUI.py</a></h3>
 
