--- a/portfolio/cryption2.html
+++ b/portfolio/cryption2.html
@@ -36,7 +36,7 @@
 	<center><h1>Cryption V2</h1></center>
   <center><h3>Note: Cryption GUI edition is currently the newest</h3></center>
 
-	<p>I created the cryption V2 after its predicesor V1 which was full of errors and worked less times than not.  The cryption program encrypts and decrypts messages using a seed.  To decrypt you need the encrypted message, the seed, and of course my program.  V2 is actually shorter than V1 was!</p>
+	<p>I created the cryption V2 after its predicesor V1 which was full of errors and worked less times than than it did.  The cryption program encrypts and decrypts messages using a seed.  To decrypt you need the encrypted message, the seed, and of course my program.  V2 is actually shorter than V1 was!</p>
 
 	<h2><a href="https://raw.githubusercontent.com/Agwebberley/agwebberley.tk/master/files/cryptionv2.py" target="blank">Download</a></h2>
 </body>
