--- a/portfolio/cryptiongui.html
+++ b/portfolio/cryptiongui.html
@@ -45,7 +45,7 @@
 <h3>Downloads</h3>
 <h3><a href="https://github.com/Agwebberley/agwebberley.tk/raw/master/files/CryptionGUI%20(ALPHA).zip">CryptionGUI.exe</a>
 <br>
-<a href="https://raw.githubusercontent.com/Agwebberley/agwebberley.tk/master/files/CryptionGUI.py">CryptionGUI.py</a></h3>
+<a href="https://github.com/Agwebberley/agwebberley.tk/raw/master/files/CryptionGUI%20(ALPHA)%20PY.zip">CryptionGUI.py</a></h3>
 
 	</body>
 	</html>
