--- a/portfolio/totank.html
+++ b/portfolio/totank.html
@@ -39,7 +39,7 @@
 
 <h2>Windows download</h2>
 <a href="https://github.com/Agwebberley/agwebberley.tk/releases/download/V1.0/ToTank.zip" target="blank"><img src="../images/Tank.jpg" alt="ToTank"></a>
-<h2>Windows instutions</h2><h3>extract zip file then open the extracted folder and click TankGame.exe choose quality and resolution and click play.</h3>
+<h2>Windows instructions</h2><h3>extract zip file then open the extracted folder and click TankGame.exe choose quality and resolution and click play.</h3>
 
 </body>
 </html>
