--- a/portfolio/cryptiongui.html
+++ b/portfolio/cryptiongui.html
@@ -43,7 +43,7 @@
 
 <br><br>
 <h3>Downloads</h3>
-<h3><a href="https://github.com/Agwebberley/agwebberley.tk/raw/master/files/CryptionGUI%20(ALPHA).zip">CryptionGUI.exe</a>
+<h3><a href="https://github.com/Agwebberley/agwebberley.tk/blob/master/files/CryptionGUIexe.zip?raw=true">CryptionGUI.exe</a>
 <br>
 <a href="https://github.com/Agwebberley/agwebberley.tk/raw/master/files/CryptionGUI%20(ALPHA)%20PY.zip">CryptionGUI.py</a></h3>
 
