--- a/portfolio/cryptiongui.html
+++ b/portfolio/cryptiongui.html
@@ -45,7 +45,7 @@
 <h3>Downloads</h3>
 <h3><a href="https://github.com/Agwebberley/agwebberley.tk/blob/master/files/CryptionGUIexe.zip?raw=true">CryptionGUI.exe</a>
 <br>
-<a href="https://github.com/Agwebberley/agwebberley.tk/blob/master/files/CryptionGUI%20(ALPHA)%20PY.zip?raw=true">CryptionGUI.py</a></h3>
+<a href="https://github.com/Agwebberley/agwebberley.tk/blob/master/files/CryptionGUI%20%20PY.zip?raw=true">CryptionGUI.py</a></h3>
 
 	</body>
 	</html>
