--- a/portfolio/cryptiongui.html
+++ b/portfolio/cryptiongui.html
@@ -35,7 +35,7 @@
 
 <center><h1>Cryption GUI</h1>
 <h3>(Newest Edition)</h3>
-
+<h3>The Current Version is 1.0</h3>
 
 <br>
 <p>Currently my newest edition of my cryption program Cryption GUI is my first python program using a GUI w/ Tkinter.  I have also converted this python program to an exe through PYisntaller.</p></center>
