--- a/portfolio/cryptiongui.html
+++ b/portfolio/cryptiongui.html
@@ -42,7 +42,7 @@
 
 <br><br>
 <h3>Downloads</h3>
-<h3><a href="https://github.com/Agwebberley/agwebberley.tk/blob/master/files/CryptionGUIexe.zip?raw=true">CryptionGUI.exe</a>
+<h3><a href="https://github.com/Agwebberley/agwebberley.tk/raw/master/files/CryptionGUIEXE.zip">CryptionGUI.exe</a>
 <br>
 <a href="https://github.com/Agwebberley/agwebberley.tk/blob/master/files/CryptionGUI%20%20PY.zip?raw=true">CryptionGUI.py</a></h3>
 
