--- a/portfolio/cryptiongui.html
+++ b/portfolio/cryptiongui.html
@@ -42,6 +42,9 @@
 
 <br><br>
 <h3>Downloads</h3>
+<br>
+<h3><a href="https://github.com/Agwebberley/agwebberley.tk/blob/master/files/CryptionGUI.exe?raw=true">CryptionGUI installer (Recommended)</a></h3>
+<br>
 <h3><a href="https://github.com/Agwebberley/agwebberley.tk/raw/master/files/CryptionGUIEXE.zip">CryptionGUI.exe</a>
 <br>
 <a href="https://github.com/Agwebberley/agwebberley.tk/blob/master/files/CryptionGUI%20%20PY.zip?raw=true">CryptionGUI.py</a></h3>
