--- a/portfolio/cryptiongui.html
+++ b/portfolio/cryptiongui.html
@@ -40,6 +40,19 @@
 <br>
 <p>Currently my newest edition of my cryption program Cryption GUI is my first python program using a GUI w/ Tkinter.  I have also converted this python program to an exe through PYisntaller.</p></center>
 
+
+<center><h2>Instructions</h2></center>
+
+<center><p>
+First enter either e (for encryption) or d (for Decryption)
+<br>
+Next enter the text that you are encrypting or decrypting
+<br>
+Next enter the seed
+<br>
+finally the text (using the seed you entered) is either decrypted or encrypted and saved to your clipboard
+</p></center>
+
 <br><br>
 <h3>Downloads</h3>
 <br>
