--- a/portfolio/cryptiongui.html
+++ b/portfolio/cryptiongui.html
@@ -56,7 +56,7 @@ finally the text (using the seed you entered) is either decrypted or encrypted a
 <br><br>
 <h3>Downloads</h3>
 <br>
-<h3><a href="https://github.com/Agwebberley/agwebberley.tk/blob/master/files/CryptionGUI.exe?raw=true">CryptionGUI installer (Recommended)</a></h3>
+<h3><a href="https://github.com/Agwebberley/agwebberley.tk/releases/download/1.0/CryptionGUI.exe">CryptionGUI installer (Recommended)</a></h3>
 <br>
 <h3><a href="https://github.com/Agwebberley/agwebberley.tk/raw/master/files/CryptionGUIEXE.zip">CryptionGUI.exe</a>
 <br>
