--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
       <a href="/portfolio/totank.html">To Tank</a>
       <a href="/portfolio/cryption2.html">Cryption V2</a>
       <a href="/portfolio/cryptiongui.html">Cryption GUI</a>
+      <a href="/portfolio/calc.html">Calculator</a>
     </div>
   </div> 
 </div>
