--- a/portfolio/cryption2.html
+++ b/portfolio/cryption2.html
@@ -29,6 +29,7 @@
       				<a href="totank.html">To Tank</a>
       				<a class="active" href="#">cryption V2</a>
               <a href="cryptiongui.html">Cryption GUI</a>
+              <a href="calc.html">Calculator</a>
     			</div>
   		</div> 
 	</div>
@@ -39,5 +40,12 @@
 	<p>I created the cryption V2 after its predicesor V1 which was full of errors and worked less times than than it did.  The cryption program encrypts and decrypts messages using a seed.  To decrypt you need the encrypted message, the seed, and of course my program.  V2 is actually shorter than V1 was!</p>
 
 	<h2><a href="https://raw.githubusercontent.com/Agwebberley/agwebberley.tk/master/files/cryptionv2.py" target="blank">Download</a></h2>
+
+
+
+  <footer><script async src="//static.zotabox.com/8/d/8d9f275810de031dd29c47cb9874d576/widgets.js"></script></script>
+
+
+  </footer>
 </body>
 </html>
