--- a/portfolio/cryptiongui.html
+++ b/portfolio/cryptiongui.html
@@ -29,6 +29,7 @@
       				<a href="totank.html">To Tank</a>
       				<a href="cryption2.html">Cryption V2</a>
       				<a class="active" href="#">Cryption GUI</a>
+              <a href="calc.html">Calculator</a>
     			</div>
   		</div> 
 	</div>
@@ -62,5 +63,11 @@ finally the text (using the seed you entered) is either decrypted or encrypted a
 <br>
 <a href="https://github.com/Agwebberley/agwebberley.tk/blob/master/files/CryptionGUI%20%20PY.zip?raw=true">CryptionGUI.py</a></h3>
 
+
+
+<footer><script async src="//static.zotabox.com/8/d/8d9f275810de031dd29c47cb9874d576/widgets.js"></script></script>
+
+
+  </footer>
 	</body>
 	</html>
