--- a/portfolio/totank.html
+++ b/portfolio/totank.html
@@ -28,6 +28,7 @@
       <a class="active" href="#">To Tank</a>
       <a href="cryption2.html">Cryption V2</a>
       <a href="cryptiongui.html">Cryption GUI</a>
+      <a href="calc.html">Calculator</a>
     </div>
   </div> 
 </div>
@@ -41,5 +42,10 @@
 <a href="https://github.com/Agwebberley/agwebberley.tk/releases/download/V1.0/ToTank.zip" target="blank"><img src="../images/Tank.jpg" alt="ToTank"></a>
 <h2>Windows instructions</h2><h3>extract zip file then open the extracted folder and click TankGame.exe choose quality and resolution and click play.</h3>
 
+
+<footer><script async src="//static.zotabox.com/8/d/8d9f275810de031dd29c47cb9874d576/widgets.js"></script></script>
+
+
+  </footer>
 </body>
 </html>
