--- a/portfolio/trophybot.html
+++ b/portfolio/trophybot.html
@@ -28,10 +28,16 @@
       				<a href="totank.html">To Tank</a>
       				<a href="cryption2.html">cryption V2</a>
               <a href="cryptiongui.html">Cryption GUI</a>
+              <a href="calc.html">Calculator</a>
     			</div>
   		</div> 
 	</div>
 		<center><h1>TrophyBot</h1></center>
 		<center><p>I have created a Discord bot using the discord.py API to count the number of "wins" that a server posts after a week the top three winners will be choosen then a image is created and that image is sent. A sample image is below.</p></center>
 		<center><img src="../images/placement_temp.jpg" alt="placement image"></center>
+
+    <footer><script async src="//static.zotabox.com/8/d/8d9f275810de031dd29c47cb9874d576/widgets.js"></script></script>
+
+
+  </footer>
 	</body>
