--- a/portfolio/calc.html
+++ b/portfolio/calc.html
@@ -42,6 +42,12 @@
 		<p>Simple Calculator made with Tkinter. EXE created through PYinstaller. <br>
 		 Know error!  after dividing you have to clear because when dividing it converts the # to a float.</p></center>
 
+	<h3>Downloads</h3>
+	<br>
+	<h3><a href="https://github.com/Agwebberley/Calculator/releases/download/1.0/calc.exe" target="_blank">calc.EXE</a></h3>
+	<br>
+	<h3><a href="#" target="blank">calc.PY</a></h3>
+
 
 
 <footer><script async src="//static.zotabox.com/8/d/8d9f275810de031dd29c47cb9874d576/widgets.js"></script></script>
