--- a/portfolio/cryptiongui.html
+++ b/portfolio/cryptiongui.html
@@ -57,11 +57,11 @@ finally the text (using the seed you entered) is either decrypted or encrypted a
 <br><br>
 <h3>Downloads</h3>
 <br>
-<h3><a href="https://github.com/Agwebberley/agwebberley.tk/releases/download/1.1/CryptionGUI.exe">CryptionGUI installer (Recommended)</a></h3>
+<h3><a href="https://github.com/Agwebberley/agwebberley.tk/releases/download/1.1/CryptionGUI.exe" target="_blank">CryptionGUI installer (Recommended)</a></h3>
 <br>
-<h3><a href="https://github.com/Agwebberley/agwebberley.tk/raw/master/files/CryptionGUIEXE.zip">CryptionGUI.exe</a>
+<h3><a href="https://github.com/Agwebberley/agwebberley.tk/raw/master/files/CryptionGUIEXE.zip" target="_blank">CryptionGUI.exe</a>
 <br>
-<a href="https://github.com/Agwebberley/agwebberley.tk/blob/master/files/CryptionGUI%20%20PY.zip?raw=true">CryptionGUI.py</a></h3>
+<a href="https://github.com/Agwebberley/agwebberley.tk/blob/master/files/CryptionGUI%20%20PY.zip?raw=true" target="_blank">CryptionGUI.py</a></h3>
 
 
 
