--- a/portfolio/calc.html
+++ b/portfolio/calc.html
@@ -40,7 +40,7 @@
 		<br>Last Updated 4/17/2020</h2>
 
 		<p>Simple Calculator made with Tkinter. EXE created through PYinstaller. <br>
-		 Know error!  after dividing you have to clear because when dividing it converts the # to a float.</p></center>
+		 Known error!  after dividing you have to clear because when dividing it converts the # to a float.</p></center>
 
 	<h3>Downloads</h3>
 	<br>
