--- a/portfolio/calc.html
+++ b/portfolio/calc.html
@@ -46,7 +46,7 @@
 	<br>
 	<h3><a href="https://github.com/Agwebberley/Calculator/releases/download/1.0/calc.exe" target="_blank">calc.EXE</a></h3>
 	<br>
-	<h3><a href="#" target="blank">calc.PY</a></h3>
+	<h3><a href="https://raw.githubusercontent.com/Agwebberley/Calculator/1.0/calc.py?token=AKSLVEAWMMMEMYVMEEMR64S6TIFSC" target="_blank">calc.PY</a></h3>
 
 
 
