--- a/portfolio/trophybot.html
+++ b/portfolio/trophybot.html
@@ -33,6 +33,8 @@
   		</div> 
 	</div>
 		<center><h1>TrophyBot</h1></center>
+    <h3>Created 3/1/2020</h3>
+    <h3>Updated 4/3/2020</h3>
 		<center><p>I have created a Discord bot using the discord.py API to count the number of "wins" that a server posts after a week the top three winners will be choosen then a image is created and that image is sent. A sample image is below.</p></center>
 		<center><img src="../images/placement_temp.jpg" alt="placement image"></center>
 
