--- a/portfolio/mp3.html
+++ b/portfolio/mp3.html
@@ -2,8 +2,60 @@
 <html>
 <head>
 	<title></title>
+	<link rel="stylesheet" type="text/css" href="../style.css">
+
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-163518874-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-163518874-1');
+</script>
 </head>
 <body>
+
+		<div class="navbar">
+  			<a href="../index.html">Home</a>
+  			<div class="dropdown">
+    			<button class="dropbtn">Projects 
+      			<i class="fa fa-caret-down"></i>
+    			</button>
+    			<div class="dropdown-content">
+      				<a href="trophybot.html">Trophy Bot</a>
+      				<a href="totank.html">To Tank</a>
+      				<a href="cryption2.html">Cryption V2</a>
+      				<a href="cryptiongui.html">Cryption GUI</a>
+              		<a href="calc.html">Calculator</a>
+              		<a href="mp3.html">MP3 Player (Planned)</a>
+    			</div>
+  		</div> 
+	</div>
+
+
+<center>
+<h1>Mp3 Player + Soundcloud/Youtube Song Downloader</h1>
+<h3>Created 4/17/2020</h3>
+<h3>Updated 4/17/2020</h3>
+
+
+<p>Description</p>
+
+</center>
+
+<!--
+<h3>Downloads</h3>
+
+<h3><a href="#">Name.EXE</a></h3>
+<h3><a href="#">Name.PY</a></h3>
+-->
+
+
+<footer><script async src="//static.zotabox.com/8/d/8d9f275810de031dd29c47cb9874d576/widgets.js"></script></script>
+
+
+  </footer>
 
 </body>
 </html>
