--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
       <a href="/portfolio/cryption2.html">Cryption V2</a>
       <a href="/portfolio/cryptiongui.html">Cryption GUI</a>
       <a href="/portfolio/calc.html">Calculator</a>
+      <a href="/portfolio/mp3.html">MP3 Player (Planned)</a>
     </div>
   </div> 
 </div>
