--- a/portfolio/trophybot.html
+++ b/portfolio/trophybot.html
@@ -29,6 +29,7 @@
       				<a href="cryption2.html">cryption V2</a>
               <a href="cryptiongui.html">Cryption GUI</a>
               <a href="calc.html">Calculator</a>
+              <a href="mp3.html">MP3 Player (Planned)</a>
     			</div>
   		</div> 
 	</div>
