--- a/portfolio/cryption2.html
+++ b/portfolio/cryption2.html
@@ -30,6 +30,7 @@
       				<a class="active" href="#">cryption V2</a>
               <a href="cryptiongui.html">Cryption GUI</a>
               <a href="calc.html">Calculator</a>
+              <a href="mp3.html">MP3 Player (Planned)</a>
     			</div>
   		</div> 
 	</div>
