--- a/portfolio/cryptiongui.html
+++ b/portfolio/cryptiongui.html
@@ -30,6 +30,7 @@
       				<a href="cryption2.html">Cryption V2</a>
       				<a class="active" href="#">Cryption GUI</a>
               <a href="calc.html">Calculator</a>
+              <a href="mp3.html">MP3 Player (Planned)</a>
     			</div>
   		</div> 
 	</div>
