--- a/portfolio/mp3.html
+++ b/portfolio/mp3.html
@@ -43,6 +43,14 @@
 
 <p>A Mp3 player that is able to download songs from youtube and soundcloud then convert them to MP3.  This will be by far the largest and most complicated project that I have ever undertook.  The sourse code will always be availible but there will be no exe till BETA.</p>
 
+<h4>RoadMap</h4>
+<ol>
+  <li>!In Progress! Create Basic MP3 Player</li>
+  <li>!Planned! Add the ability to download songs from SoundCloud from url</li>
+  <li>!Planned! Add the ability to download songs from Youtube from url</li>
+  <li>!Planned! Add the ability to search soundcloud songs and select them inside program</li>
+</ol>
+
 </center>
 
 <!--
