--- a/portfolio/cryption2.html
+++ b/portfolio/cryption2.html
@@ -27,7 +27,7 @@
     			<div class="dropdown-content">
       				<a href="trophybot.html">Trophy Bot</a>
       				<a href="totank.html">To Tank</a>
-      				<a class="active" href="#">cryption V2</a>
+      				<a class="active" href="#">Cryption V2</a>
               <a href="cryptiongui.html">Cryption GUI</a>
               <a href="calc.html">Calculator</a>
               <a href="mp3.html">MP3 Player (Planned)</a>
