--- a/portfolio/mp3.html
+++ b/portfolio/mp3.html
@@ -36,7 +36,7 @@
 
 <center>
 <h1>Mp3 Player + Soundcloud/Youtube Song Downloader</h1>
-<h2>!Currently planned!</h2>
+<h2>!In Progress!</h2>
 <h3>Created 4/17/2020</h3>
 <h3>Updated 4/17/2020</h3>
 
