--- a/portfolio/totank.html
+++ b/portfolio/totank.html
@@ -29,7 +29,7 @@
       <a href="cryption2.html">Cryption V2</a>
       <a href="cryptiongui.html">Cryption GUI</a>
       <a href="calc.html">Calculator</a>
-      <a href="mp3.html">MP3 Player (Planned)</a>
+      <a href="mp3.html">MP3 Player (In Progress)</a>
     </div>
   </div> 
 </div>
