--- a/portfolio/calc.html
+++ b/portfolio/calc.html
@@ -31,7 +31,7 @@
       				<a href="cryption2.html">cryption V2</a>
               		<a href="cryptiongui.html">Cryption GUI</a>
               		<a class="active" href="#">Calculator</a>
-              		<a href="mp3.html">MP3 Player (Planned)</a>
+              		<a href="mp3.html">MP3 Player (In Progress)</a>
     			</div>
   		</div> 
 	</div>
