--- a/portfolio/trophybot.html
+++ b/portfolio/trophybot.html
@@ -26,7 +26,7 @@
     			<div class="dropdown-content">
       				<a class="active" href="#">Trophy Bot</a>
       				<a href="totank.html">To Tank</a>
-      				<a href="cryption2.html">cryption V2</a>
+      				<a href="cryption2.html">Cryption V2</a>
               <a href="cryptiongui.html">Cryption GUI</a>
               <a href="calc.html">Calculator</a>
               <a href="mp3.html">MP3 Player (In Progress)</a>
