--- a/portfolio/calc.html
+++ b/portfolio/calc.html
@@ -28,7 +28,7 @@
     			<div class="dropdown-content">
       				<a href="trophybot.html">Trophy Bot</a>
       				<a href="totank.html">To Tank</a>
-      				<a href="cryption2.html">cryption V2</a>
+      				<a href="cryption2.html">Cryption V2</a>
               		<a href="cryptiongui.html">Cryption GUI</a>
               		<a class="active" href="#">Calculator</a>
               		<a href="mp3.html">MP3 Player (In Progress)</a>
