--- a/404.html
+++ b/404.html
@@ -19,6 +19,9 @@
       <a href="/portfolio/totank.html">To Tank</a>
       <a href="/portfolio/cryption2.html">Cryption V2</a>
       <a href="/portfolio/cryptiongui.html">Cryption GUI</a>
+      <a href="/portfolio/calc.html">Calculator</a>
+      <a href="/portfolio/mp3.html">MP3 Player !In Progress!</a>
+      <a href="/portfolio/django.html">Django Website Redo !In Progress!</a>
     </div>
   </div> 
 </div>
