--- a/portfolio/calc.html
+++ b/portfolio/calc.html
@@ -31,7 +31,8 @@
       				<a href="cryption2.html">Cryption V2</a>
               		<a href="cryptiongui.html">Cryption GUI</a>
               		<a class="active" href="#">Calculator</a>
-              		<a href="mp3.html">MP3 Player (In Progress)</a>
+              		<a href="mp3.html">MP3 Player !In Progress!</a>
+                  <a href="django.html">Django Website Redo !In Progress!</a>
     			</div>
   		</div> 
 	</div>
