--- a/portfolio/cryptiongui.html
+++ b/portfolio/cryptiongui.html
@@ -30,7 +30,8 @@
       				<a href="cryption2.html">Cryption V2</a>
       				<a class="active" href="#">Cryption GUI</a>
               <a href="calc.html">Calculator</a>
-              <a href="mp3.html">MP3 Player (In Progress)</a>
+              <a href="mp3.html">MP3 Player !In Progress!</a>
+              <a href="django.html">Django Website Redo !In Progress!</a>
     			</div>
   		</div> 
 	</div>
