--- a/portfolio/django.html
+++ b/portfolio/django.html
@@ -36,21 +36,21 @@
 
 
 <center>
-<h1></h1>
+<h1>Django Website</h1>
 <h3>Created 4/20/2020</h3>
-<h3>Updated </h3>
+<h3>Updated 4/20/2020</h3>
 
 
-<p>Description</p>
+<h3>I am Planning on creating a django website to replace the current one.</h3>
 
 </center>
 
-
+<!--
 <h3>Downloads</h3>
 
 <h3><a href="#">Name.EXE</a></h3>
 <h3><a href="#">Name.PY</a></h3>
-
+-->
 <footer><script async src="//static.zotabox.com/8/d/8d9f275810de031dd29c47cb9874d576/widgets.js"></script></script>
 
 
