--- a/portfolio/calc.html
+++ b/portfolio/calc.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
 <head>
@@ -39,10 +38,10 @@
 
 	<center><h1>Calculator</h1>
 		<h3>Created 4/17/2020
-		<br>Last Updated 4/17/2020</h3>
+		<br>Last Updated 4/22/2020<br>
+        Latest Version: 1.2</h3>
 
-		<p>Simple Calculator made with Tkinter. EXE created through PYinstaller. <br>
-		 Known error!  after dividing you have to clear because when dividing it converts the # to a float.</p></center>
+		<p>Simple Calculator made with Tkinter. EXE created through PYinstaller.</p></center>
 <br>
 
 	<h3>Downloads</h3>
