--- a/portfolio/django.html
+++ b/portfolio/django.html
@@ -38,10 +38,10 @@
 <center>
 <h1>Django Website</h1>
 <h3>Created 4/20/2020</h3>
-<h3>Updated 4/20/2020</h3>
+<h3>Updated 4/21/2020</h3>
 
 
-<h3>I am Planning on creating a django website to replace the current one.</h3>
+<h3>I am Working on on creating a django website to replace the current one.</h3>
 
 </center>
 
